// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items Component disable charts it renders the default widget 1`] = `
<ThemeProvider
  theme={[Function]}
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <StatItemsComponent
      description="HOSTS"
      fields={
        Array [
          Object {
            "color": "#3185FC",
            "icon": "cross",
            "key": "hosts",
            "value": null,
          },
        ]
      }
      from={1560578400000}
      id="statItems"
      index={0}
      key="mock-keys"
      narrowDateRange={[MockFunction]}
      to={1560837600000}
    >
      <FlexItem
        data-test-subj="stat-item"
      >
        <EuiFlexItem
          className="sc-AykKG krmHWP"
          data-test-subj="stat-item"
        >
          <div
            className="euiFlexItem sc-AykKG krmHWP"
            data-test-subj="stat-item"
          >
            <EuiPanel
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="euiPanel euiPanel--paddingMedium"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <EuiFlexGroup
                  gutterSize="none"
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <EuiFlexItem>
                      <div
                        className="euiFlexItem"
                      >
                        <EuiTitle
                          size="xxxs"
                        >
                          <h6
                            className="euiTitle euiTitle--xxxsmall"
                          >
                            HOSTS
                          </h6>
                        </EuiTitle>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <Connect(InspectButtonComponent)
                          inspectIndex={0}
                          queryId="statItems"
                          show={false}
                          title="KPI HOSTS"
                        >
                          <InspectButtonComponent
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <InspectContainer
                              data-test-subj="transparent-inspect-container"
                              showInspect={false}
                            >
                              <div
                                className="sc-AykKF cUIXEb"
                                data-test-subj="transparent-inspect-container"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </InspectContainer>
                          </InspectButtonComponent>
                        </Connect(InspectButtonComponent)>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <FlexItem
                      key="stat-items-field-hosts"
                    >
                      <EuiFlexItem
                        className="sc-AykKG krmHWP"
                      >
                        <div
                          className="euiFlexItem sc-AykKG krmHWP"
                        >
                          <EuiFlexGroup
                            alignItems="center"
                            gutterSize="m"
                            responsive={false}
                          >
                            <div
                              className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              <FlexItem>
                                <EuiFlexItem
                                  className="sc-AykKG krmHWP"
                                >
                                  <div
                                    className="euiFlexItem sc-AykKG krmHWP"
                                  >
                                    <StatValue>
                                      <EuiTitle
                                        className="sc-AykKH eSsePF"
                                      >
                                        <p
                                          className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                          data-test-subj="stat-title"
                                        >
                                          <EmptyWrapper>
                                            <span
                                              className="sc-AykKC bGtoQZ"
                                            >
                                              —
                                            </span>
                                          </EmptyWrapper>
                                           
                                        </p>
                                      </EuiTitle>
                                    </StatValue>
                                  </div>
                                </EuiFlexItem>
                              </FlexItem>
                            </div>
                          </EuiFlexGroup>
                        </div>
                      </EuiFlexItem>
                    </FlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  />
                </EuiFlexGroup>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </FlexItem>
    </StatItemsComponent>
  </Provider>
</ThemeProvider>
`;

exports[`Stat Items Component disable charts it renders the default widget 2`] = `
<ThemeProvider
  theme={[Function]}
>
  <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <StatItemsComponent
      areaChart={Array []}
      barChart={Array []}
      description="HOSTS"
      fields={
        Array [
          Object {
            "color": "#3185FC",
            "icon": "cross",
            "key": "hosts",
            "value": null,
          },
        ]
      }
      from={1560578400000}
      id="statItems"
      index={0}
      key="mock-keys"
      narrowDateRange={[MockFunction]}
      to={1560837600000}
    >
      <FlexItem
        data-test-subj="stat-item"
      >
        <EuiFlexItem
          className="sc-AykKG krmHWP"
          data-test-subj="stat-item"
        >
          <div
            className="euiFlexItem sc-AykKG krmHWP"
            data-test-subj="stat-item"
          >
            <EuiPanel
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="euiPanel euiPanel--paddingMedium"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <EuiFlexGroup
                  gutterSize="none"
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <EuiFlexItem>
                      <div
                        className="euiFlexItem"
                      >
                        <EuiTitle
                          size="xxxs"
                        >
                          <h6
                            className="euiTitle euiTitle--xxxsmall"
                          >
                            HOSTS
                          </h6>
                        </EuiTitle>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <Connect(InspectButtonComponent)
                          inspectIndex={0}
                          queryId="statItems"
                          show={false}
                          title="KPI HOSTS"
                        >
                          <InspectButtonComponent
                            id=""
                            inspect={null}
                            inspectIndex={0}
                            isInspected={false}
                            loading={false}
                            queryId="statItems"
                            refetch={null}
                            selectedInspectIndex={0}
                            setIsInspected={[Function]}
                            show={false}
                            title="KPI HOSTS"
                          >
                            <InspectContainer
                              data-test-subj="transparent-inspect-container"
                              showInspect={false}
                            >
                              <div
                                className="sc-AykKF cUIXEb"
                                data-test-subj="transparent-inspect-container"
                              >
                                <EuiButtonIcon
                                  aria-label="Inspect"
                                  data-test-subj="inspect-icon-button"
                                  iconSize="m"
                                  iconType="inspect"
                                  onClick={[Function]}
                                  title="Inspect"
                                >
                                  <button
                                    aria-label="Inspect"
                                    className="euiButtonIcon euiButtonIcon--primary"
                                    data-test-subj="inspect-icon-button"
                                    onClick={[Function]}
                                    title="Inspect"
                                    type="button"
                                  >
                                    <EuiIcon
                                      aria-hidden="true"
                                      className="euiButtonIcon__icon"
                                      size="m"
                                      type="inspect"
                                    >
                                      <EuiIconEmpty
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        style={null}
                                      >
                                        <svg
                                          aria-hidden="true"
                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                          focusable="false"
                                          height={16}
                                          style={null}
                                          viewBox="0 0 16 16"
                                          width={16}
                                          xmlns="http://www.w3.org/2000/svg"
                                        />
                                      </EuiIconEmpty>
                                    </EuiIcon>
                                  </button>
                                </EuiButtonIcon>
                                <ModalInspectQuery
                                  closeModal={[Function]}
                                  data-test-subj="inspect-modal"
                                  isShowing={false}
                                  request={null}
                                  response={null}
                                  title="KPI HOSTS"
                                />
                              </div>
                            </InspectContainer>
                          </InspectButtonComponent>
                        </Connect(InspectButtonComponent)>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  >
                    <FlexItem
                      key="stat-items-field-hosts"
                    >
                      <EuiFlexItem
                        className="sc-AykKG krmHWP"
                      >
                        <div
                          className="euiFlexItem sc-AykKG krmHWP"
                        >
                          <EuiFlexGroup
                            alignItems="center"
                            gutterSize="m"
                            responsive={false}
                          >
                            <div
                              className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                            >
                              0
                              <FlexItem>
                                <EuiFlexItem
                                  className="sc-AykKG krmHWP"
                                >
                                  <div
                                    className="euiFlexItem sc-AykKG krmHWP"
                                  >
                                    <StatValue>
                                      <EuiTitle
                                        className="sc-AykKH eSsePF"
                                      >
                                        <p
                                          className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                          data-test-subj="stat-title"
                                        >
                                          <EmptyWrapper>
                                            <span
                                              className="sc-AykKC bGtoQZ"
                                            >
                                              —
                                            </span>
                                          </EmptyWrapper>
                                           
                                        </p>
                                      </EuiTitle>
                                    </StatValue>
                                  </div>
                                </EuiFlexItem>
                              </FlexItem>
                            </div>
                          </EuiFlexGroup>
                        </div>
                      </EuiFlexItem>
                    </FlexItem>
                  </div>
                </EuiFlexGroup>
                <EuiFlexGroup>
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                  />
                </EuiFlexGroup>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </FlexItem>
    </StatItemsComponent>
  </Provider>
</ThemeProvider>
`;

exports[`Stat Items Component rendering kpis with charts it renders the default widget 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <StatItemsComponent
    areaChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIpsHistogram",
          "value": Array [
            Object {
              "x": 1556888400000,
              "y": 565975,
            },
            Object {
              "x": 1556931600000,
              "y": 1084366,
            },
            Object {
              "x": 1556974800000,
              "y": 12280,
            },
          ],
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIps",
          "value": Array [
            Object {
              "x": "uniqueSourceIps",
              "y": "1714",
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIps",
          "value": Array [
            Object {
              "x": "uniqueDestinationIps",
              "y": 2354,
            },
          ],
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    enableAreaChart={true}
    enableBarChart={true}
    fields={
      Array [
        Object {
          "color": "#DB1374",
          "description": "Source",
          "icon": "cross",
          "key": "uniqueSourceIps",
          "value": 1714,
        },
        Object {
          "color": "#490092",
          "description": "Dest.",
          "icon": "cross",
          "key": "uniqueDestinationIps",
          "value": 2359,
        },
      ]
    }
    from={1560578400000}
    id="statItems"
    index={0}
    key="mock-keys"
    narrowDateRange={[MockFunction]}
    to={1560837600000}
  >
    <FlexItem
      data-test-subj="stat-item"
    >
      <EuiFlexItem
        className="sc-AykKG krmHWP"
        data-test-subj="stat-item"
      >
        <div
          className="euiFlexItem sc-AykKG krmHWP"
          data-test-subj="stat-item"
        >
          <EuiPanel
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <EuiFlexGroup
                gutterSize="none"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <EuiFlexItem>
                    <div
                      className="euiFlexItem"
                    >
                      <EuiTitle
                        size="xxxs"
                      >
                        <h6
                          className="euiTitle euiTitle--xxxsmall"
                        >
                          UNIQUE_PRIVATE_IPS
                        </h6>
                      </EuiTitle>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <Connect(InspectButtonComponent)
                        inspectIndex={0}
                        queryId="statItems"
                        show={false}
                        title="KPI UNIQUE_PRIVATE_IPS"
                      >
                        <InspectButtonComponent
                          id=""
                          inspect={null}
                          inspectIndex={0}
                          isInspected={false}
                          loading={false}
                          queryId="statItems"
                          refetch={null}
                          selectedInspectIndex={0}
                          setIsInspected={[Function]}
                          show={false}
                          title="KPI UNIQUE_PRIVATE_IPS"
                        >
                          <InspectContainer
                            data-test-subj="transparent-inspect-container"
                            showInspect={false}
                          >
                            <div
                              className="sc-AykKF gGhbbL"
                              data-test-subj="transparent-inspect-container"
                            >
                              <EuiButtonIcon
                                aria-label="Inspect"
                                data-test-subj="inspect-icon-button"
                                iconSize="m"
                                iconType="inspect"
                                onClick={[Function]}
                                title="Inspect"
                              >
                                <button
                                  aria-label="Inspect"
                                  className="euiButtonIcon euiButtonIcon--primary"
                                  data-test-subj="inspect-icon-button"
                                  onClick={[Function]}
                                  title="Inspect"
                                  type="button"
                                >
                                  <EuiIcon
                                    aria-hidden="true"
                                    className="euiButtonIcon__icon"
                                    size="m"
                                    type="inspect"
                                  >
                                    <EuiIconEmpty
                                      aria-hidden="true"
                                      className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                      focusable="false"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
                                        focusable="false"
                                        height={16}
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </button>
                              </EuiButtonIcon>
                              <ModalInspectQuery
                                closeModal={[Function]}
                                data-test-subj="inspect-modal"
                                isShowing={false}
                                request={null}
                                response={null}
                                title="KPI UNIQUE_PRIVATE_IPS"
                              />
                            </div>
                          </InspectContainer>
                        </InspectButtonComponent>
                      </Connect(InspectButtonComponent)>
                    </div>
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <FlexItem
                    key="stat-items-field-uniqueSourceIps"
                  >
                    <EuiFlexItem
                      className="sc-AykKG krmHWP"
                    >
                      <div
                        className="euiFlexItem sc-AykKG krmHWP"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <FlexItem
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-AykKG krmHWP"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-AykKG krmHWP"
                                >
                                  <EuiIcon
                                    color="#DB1374"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#DB1374",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#DB1374",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </FlexItem>
                            <FlexItem>
                              <EuiFlexItem
                                className="sc-AykKG krmHWP"
                              >
                                <div
                                  className="euiFlexItem sc-AykKG krmHWP"
                                >
                                  <StatValue>
                                    <EuiTitle
                                      className="sc-AykKH eSsePF"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                        data-test-subj="stat-title"
                                      >
                                        1,714
                                         
                                        Source
                                      </p>
                                    </EuiTitle>
                                  </StatValue>
                                </div>
                              </EuiFlexItem>
                            </FlexItem>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </FlexItem>
                  <FlexItem
                    key="stat-items-field-uniqueDestinationIps"
                  >
                    <EuiFlexItem
                      className="sc-AykKG krmHWP"
                    >
                      <div
                        className="euiFlexItem sc-AykKG krmHWP"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <FlexItem
                              grow={false}
                            >
                              <EuiFlexItem
                                className="sc-AykKG krmHWP"
                                grow={false}
                              >
                                <div
                                  className="euiFlexItem euiFlexItem--flexGrowZero sc-AykKG krmHWP"
                                >
                                  <EuiIcon
                                    color="#490092"
                                    data-test-subj="stat-icon"
                                    size="l"
                                    type="cross"
                                  >
                                    <EuiIconEmpty
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      style={
                                        Object {
                                          "fill": "#490092",
                                        }
                                      }
                                    >
                                      <svg
                                        className="euiIcon euiIcon--large euiIcon-isLoading"
                                        data-test-subj="stat-icon"
                                        focusable="false"
                                        height={16}
                                        style={
                                          Object {
                                            "fill": "#490092",
                                          }
                                        }
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </EuiFlexItem>
                            </FlexItem>
                            <FlexItem>
                              <EuiFlexItem
                                className="sc-AykKG krmHWP"
                              >
                                <div
                                  className="euiFlexItem sc-AykKG krmHWP"
                                >
                                  <StatValue>
                                    <EuiTitle
                                      className="sc-AykKH eSsePF"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-AykKH eSsePF"
                                        data-test-subj="stat-title"
                                      >
                                        2,359
                                         
                                        Dest.
                                      </p>
                                    </EuiTitle>
                                  </StatValue>
                                </div>
                              </EuiFlexItem>
                            </FlexItem>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </FlexItem>
                </div>
              </EuiFlexGroup>
              <EuiHorizontalRule>
                <hr
                  className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
                />
              </EuiHorizontalRule>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <FlexItem>
                    <EuiFlexItem
                      className="sc-AykKG krmHWP"
                    >
                      <div
                        className="euiFlexItem sc-AykKG krmHWP"
                      >
                        <BarChart
                          barChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueSourceIps",
                                    "y": "1714",
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIps",
                                "value": Array [
                                  Object {
                                    "x": "uniqueDestinationIps",
                                    "y": 2354,
                                  },
                                ],
                              },
                            ]
                          }
                          configs={
                            Object {
                              "axis": Object {
                                "xTickFormatter": [Function],
                              },
                              "customHeight": 74,
                              "series": Object {
                                "stackAccessors": Array [
                                  "y0",
                                ],
                                "xScaleType": "ordinal",
                                "yScaleType": "linear",
                              },
                              "settings": Object {
                                "onElementClick": [Function],
                                "rotation": 90,
                              },
                            }
                          }
                        >
                          <div
                            className="barchart"
                          />
                        </BarChart>
                      </div>
                    </EuiFlexItem>
                  </FlexItem>
                  <FlexItem>
                    <EuiFlexItem
                      className="sc-AykKG krmHWP"
                    >
                      <div
                        className="euiFlexItem sc-AykKG krmHWP"
                      >
                        <AreaChart
                          areaChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556888400000,
                                    "y": 565975,
                                  },
                                  Object {
                                    "x": 1556931600000,
                                    "y": 1084366,
                                  },
                                  Object {
                                    "x": 1556974800000,
                                    "y": 12280,
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556888400000,
                                    "y": 565975,
                                  },
                                  Object {
                                    "x": 1556931600000,
                                    "y": 1084366,
                                  },
                                  Object {
                                    "x": 1556974800000,
                                    "y": 12280,
                                  },
                                ],
                              },
                            ]
                          }
                          configs={
                            Object {
                              "axis": Object {
                                "xTickFormatter": [Function],
                                "yTickFormatter": [Function],
                              },
                              "customHeight": 74,
                              "series": Object {
                                "xScaleType": "time",
                                "yScaleType": "linear",
                              },
                              "settings": Object {
                                "onBrushEnd": [MockFunction],
                              },
                            }
                          }
                        >
                          <div
                            className="areachart"
                          />
                        </AreaChart>
                      </div>
                    </EuiFlexItem>
                  </FlexItem>
                </div>
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </FlexItem>
  </StatItemsComponent>
</Provider>
`;
